--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>Mixtape</title>
+	<link rel="shortcut icon" href="images/logo_title.ico" />
+<title>KND</title>
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="description" content="Mixtape template project">
@@ -21,7 +22,7 @@
 	<!-- Header -->
 	<header class="header">
 		<div class="header_content d-flex flex-row align-items-center justify-content-center">
-			<div class="logo"><a href="#">Mixtape</a></div>
+			<div class="logo"><a href="#">KND</a></div>
 			<div class="log_reg">
 				<ul class="d-flex flex-row align-items-start justify-content-start">
 					<li><a href="#">Login</a></li>
@@ -86,9 +87,8 @@
 					<div class="home_container">
 						<div class="home_container_inner d-flex flex-column align-items-center justify-content-center">
 							<div class="home_content text-center">
-								<div class="home_subtitle">New single release</div>
-								<div class="home_title"><h1>Love is all around</h1></div>
-								<div class="home_link"><a href="#">Listen on Soundcloud</a></div>
+								<div class="home_title"><h1>Icy Objects</h1></div>
+								<div class="home_link"><a href="https://soundcloud.com/k-n-d/icy-objects" target="_blank">Listen on Soundcloud</a></div>
 							</div>
 						</div>
 					</div>
@@ -96,13 +96,12 @@
 
 				<!-- Slide -->
 				<div class="owl-item">
-					<div class="background_image" style="background-image:url(images/index.jpg)"></div>
+					<div class="background_image" style="background-image:url(images/index_2.png)"></div>
 					<div class="home_container">
 						<div class="home_container_inner d-flex flex-column align-items-center justify-content-center">
 							<div class="home_content text-center">
-								<div class="home_subtitle">New single release</div>
-								<div class="home_title"><h1>Love is all around</h1></div>
-								<div class="home_link"><a href="#">Listen on Soundcloud</a></div>
+								<div class="home_title"><h1>DLPHC</h1></div>
+								<div class="home_link"><a href="https://soundcloud.com/k-n-d/dlphc" target="_blank">Listen on Soundcloud</a></div>
 							</div>
 						</div>
 					</div>
@@ -110,13 +109,12 @@
 
 				<!-- Slide -->
 				<div class="owl-item">
-					<div class="background_image" style="background-image:url(images/index.jpg)"></div>
+					<div class="background_image" style="background-image:url(images/index_1.jpg)"></div>
 					<div class="home_container">
 						<div class="home_container_inner d-flex flex-column align-items-center justify-content-center">
 							<div class="home_content text-center">
-								<div class="home_subtitle">New single release</div>
-								<div class="home_title"><h1>Love is all around</h1></div>
-								<div class="home_link"><a href="#">Listen on Soundcloud</a></div>
+								<div class="home_title"><h1>Dark Age</h1></div>
+								<div class="home_link"><a href="https://soundcloud.com/k-n-d/dark-age" target="_blank">Listen on Soundcloud</a></div>
 							</div>
 						</div>
 					</div>
