--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 		</div>
 	</div>
 
-	<!-- Featured Album -->
+	<!-- featured Album -->
 
 	<div class="featured_album">
 		<div class="background_image featured_background" style="background-image:url(images/featured.png)"></div>
@@ -132,8 +132,8 @@
 			<div class="row">
 				<div class="col-lg-6 offset-lg-6">
 					<div class="section_title_container">
-						<div class="section_subtitle">Events</div>
-						<div class="section_title"><h1>Featured Album</h1></div>
+						<div class="section_subtitle">Here are some tracks that had not seen the light.</div>
+						<div class="section_title"><h1>Unreleased</h1></div>
 					</div>
 				</div>
 			</div>
@@ -154,10 +154,10 @@
 						<div class="featured_album_player">
 							<div class="featured_album_title_bar d-flex flex-row align-items-center justify-content-start">
 								<div class="featured_album_title_container">
-									<div class="featured_album_artist">Maria Smith</div>
-									<div class="featured_album_title">Love is all Around</div>
+									<div class="featured_album_artist">ZSERTOF</div>
+									<div class="featured_album_title">Three different masters of the same song.</div>
 								</div>
-								<div class="featured_album_link ml-auto"><a href="#">buy it on itunes</a></div>
+								<!-- <div class="featured_album_link ml-auto"><a href="#">buy it on itunes</a></div> -->
 							</div>
 							<div id="jplayer_1" class="jp-jplayer"></div>
 							<div id="jp_container_1" class="jp-audio" role="application" aria-label="media player">
