--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
 				<!-- Artist Image -->
 				<div class="col-lg-4 artist_image_col">
 					<div class="artist_image">
-						<img src="images/artist." alt="">
+						<img src="images/artist.png" alt="">
 					</div>
 				</div>
 
