Commit for My personal website

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 	<!-- featured Album -->
 
 	<div class="featured_album">
-		<div class="background_image featured_background" style="background-image:url(images/featured.png)"></div>
+		<div class="background_image featured_background"></div>
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-6 offset-lg-6">
@@ -274,6 +274,7 @@
 						</div>
 						<div class="single_player_container d-flex flex-column align-items-start justify-content-center">
 							<div class="single_player">
+								<div class="featured_album_link ml-auto"><a href="http://www.beatport.com/track/nothing-but-a-cat-original-mix/9519276" target="_blank">buy it on Beatport</a></div>
 								<div id="jplayer_2" class="jp-jplayer"></div>
 								<div id="jp_container_2" class="jp-audio" role="application" aria-label="media player">
 									<div class="jp-type-single">
