--- a/index.html
+++ b/index.html
@@ -256,8 +256,8 @@
 							<div class="section_title"><h1>KND</h1></div>
 						</div>
 						<div class="artist_text">
-							<p> In vitae nisi aliquam, scelerisque leo a, volutpat sem. Vivamus rutrum dui fermentum eros hendrerit, id lobortis leo volutpat. Maecenas sollicitudin est in libero pretium interdum. Nullam volutpat dui sem, ac congue purus luctus nec. Curabitur luctus luctus erat, sit amet facilisis quam congue quis. Quisque ornare luctus erat id dignissim. Nullam ac nunc quis ex porttitor luctus.</p>
-							<p>Integer sed facilisis eros. In iaculis rhoncus velit in malesuada. In hac habitasse platea dictumst. Fusce erat ex, consectetur sit amet ornare suscipit, porta et erat. Donec nec nisi in nibh commodo laoreet. Mauris dapibus justo ut feugiat malesuada. Fusce ultricies ante tortor, non vestibulum est feugiat ut.</p>
+							<p>Dreamer/Producer/Remixer/DJ/Synth Sorcerer/Degree in History/Sofware Developer/Technical Writer</p>
+							<p>Techsound/Lifeform Recordings/Cubek/Miu Recordings/Bad Reputation/Mephyst Label</p>
 						</div>
 						<div class="single_player_container d-flex flex-column align-items-start justify-content-center">
 							<div class="single_player">
