Commit for My personal website

--- a/index.html
+++ b/index.html
@@ -288,12 +288,7 @@
 					<!-- Artist Content -->
 					<div class="col-lg-7 offset-lg-1">
 						<div class="artist_content">
-							<div class="section_title_container">
-								<div class="section_subtitle">About Me</div>
-								<div class="section_title">
-									<h1>KND</h1>
-								</div>
-							</div>
+							
 							<div class="artist_text">
 								<p>Dreamer/Producer/Remixer/DJ/Synth Sorcerer/Degree in History/Sofware
 									Developer/Technical Writer</p>
@@ -372,7 +367,7 @@
 			<div class="copyright_bar">
 				<span>Copyright &copy;
 					<script>document.write(new Date().getFullYear());</script> All rights reserved | All the music and
-					art covers are created by Mauricio Drada Dávila| This template is made with <i class="fa fa-heart-o"
+					art created by Mauricio Drada Dávila | This template is made with <i class="fa fa-heart-o"
 						aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a></span>
 			</div>
 		</footer>
