--- a/index.html
+++ b/index.html
@@ -366,9 +366,8 @@
 		<footer class="footer">
 			<div class="copyright_bar">
 				<span>Copyright &copy;
-					<script>document.write(new Date().getFullYear());</script> All rights reserved | All the music and
-					art created by Mauricio Drada Dávila | This template is made with <i class="fa fa-heart-o"
-						aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a></span>
+					<script>document.write(new Date().getFullYear());</script> All rights reserved | All the music and art created by Mauricio Drada Dávila | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
+				</span>
 			</div>
 		</footer>
 	</div>
