--- a/index.html
+++ b/index.html
@@ -34,6 +34,13 @@
 						<li><a href="contact.html">Contact</a></li>
 					</ul>
 				</nav>
+				<div class="hamburger ml-auto">
+					<div class="d-flex flex-column align-items-end justify-content-between">
+						<div></div>
+						<div></div>
+						<div></div>
+					</div>
+				</div>
 			</div>
 		</header>
 
