--- a/index.html
+++ b/index.html
@@ -25,6 +25,12 @@
 		<header class="header">
 			<div class="header_content d-flex flex-row align-items-center justify-content-center">
 				<div class="logo"><a href="#">KND</a></div>
+				<div class="log_reg">
+					<ul class="d-flex flex-row align-items-start justify-content-start">
+						<li><a href="#">Login</a></li>
+						<li><a href="#">Register</a></li>
+					</ul>
+				</div>
 				<nav class="main_nav">
 					<ul class="d-flex flex-row align-items-start justify-content-start">
 						<li class="active"><a href="index.html">Home</a></li>
