Commit for My personal website

--- a/index.html
+++ b/index.html
@@ -55,9 +55,7 @@
 			<div>
 				<div class="menu_overlay"></div>
 				<div class="menu_container d-flex flex-column align-items-start justify-content-center">
-					<div class="menu_log_reg">
-						
-					</div>
+					<div class="menu_log_reg"></div>
 					<nav class="menu_nav">
 						<ul class="d-flex flex-column align-items-start justify-content-start">
 							<li><a href="index.html">Home</a></li>
