Commit for My personal website

--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
 			<div class="header_content d-flex flex-row align-items-center justify-content-center">
 				<div class="logo"><a href="#">KND</a></div>
 				<div class="log_reg">
-				<ul class="d-flex flex-row align-items-start justify-content-start">
-				
-				</ul>
-			</div>
+					<ul class="d-flex flex-row align-items-start justify-content-start">
+
+					</ul>
+				</div>
 				<nav class="main_nav">
 					<ul class="d-flex flex-row align-items-start justify-content-start">
 						<li class="active"><a href="index.html">Home</a></li>
@@ -295,7 +295,7 @@
 					<!-- Artist Content -->
 					<div class="col-lg-7 offset-lg-1">
 						<div class="artist_content">
-							
+
 							<div class="artist_text">
 								<p>Dreamer/Producer/Remixer/DJ/Synth Sorcerer/Degree in History/Sofware
 									Developer/Technical Writer</p>
@@ -373,7 +373,9 @@
 		<footer class="footer">
 			<div class="copyright_bar">
 				<span>Copyright &copy;
-					<script>document.write(new Date().getFullYear());</script> All rights reserved | All the music and art created by Mauricio Drada Dávila | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
+					<script>document.write(new Date().getFullYear());</script> All rights reserved | All the music and
+					art created by Mauricio Drada Dávila | This template is made with <i class="fa fa-heart-o"
+						aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
 				</span>
 			</div>
 		</footer>
