Commit for My personal website

--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
 				<nav class="main_nav">
 					<ul class="d-flex flex-row align-items-start justify-content-start">
 						<li class="active"><a href="index.html">Home</a></li>
-						<li><a href="about.html">About</a></li>
-						<li><a href="music.html">Music</a></li>
-						<li><a href="blog.html">News</a></li>
-						<li><a href="contact.html">Contact</a></li>
+						<li><a href="about.html">Music</a></li>
+						<li><a href="music.html">----</a></li>
+						<li><a href="blog.html">----</a></li>
+						<li><a href="contact.html">----</a></li>
 					</ul>
 				</nav>
 				<div class="hamburger ml-auto">
@@ -367,8 +367,8 @@
 		<footer class="footer">
 			<div class="copyright_bar">
 				<span>Copyright &copy;
-					<script>document.write(new Date().getFullYear());</script> All rights reserved | All the music and
-					art created by Mauricio Drada Dávila | This template is made with <i class="fa fa-heart-o"
+					<script>document.write(new Date().getFullYear());</script> All rights reserved | Music and
+					artwork by Mauricio Drada Dávila | This template is made with <i class="fa fa-heart-o"
 						aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
 				</span>
 			</div>
