--- a/index.html
+++ b/index.html
@@ -58,10 +58,10 @@
 					<nav class="menu_nav">
 						<ul class="d-flex flex-column align-items-start justify-content-start">
 							<li><a href="index.html">Home</a></li>
-							<li><a href="about.html">About</a></li>
-							<li><a href="music.html">Music</a></li>
-							<li><a href="blog.html">News</a></li>
-							<li><a href="contact.html">Contact</a></li>
+							<li><a href="about.html">Music</a></li>
+							<li><a href="music.html">----</a></li>
+							<li><a href="blog.html">----</a></li>
+							<li><a href="contact.html">----</a></li>
 						</ul>
 					</nav>
 				</div>
