Commit for My personal website

--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
 							<div class="artist_text">
 								<p>Dreamer/Producer/Remixer/DJ/Synth Sorcerer/Degree in History/Sofware
 									Developer/Technical Writer</p>
-								<p>Techsound/Lifeform Recordings/Cubek/Miu Recordings/Bad Reputation/Mephyst Label</p>
+								<p>Techsound Records/Lifeform Recordings/Cubek Label/Miu Recordings/Bad Reputation/Mephyst Label</p>
 							</div>
 							<div
 								class="single_player_container d-flex flex-column align-items-start justify-content-center">
