Commit for My personal website

--- a/index.html
+++ b/index.html
@@ -18,9 +18,7 @@
 </head>
 
 <body>
-
 	<div class="super_container">
-
 		<!-- Header -->
 		<header class="header">
 			<div class="header_content d-flex flex-row align-items-center justify-content-center">
@@ -294,7 +292,8 @@
 							<div class="artist_text">
 								<p>Dreamer/Producer/Remixer/DJ/Synth Sorcerer/Degree in History/Sofware
 									Developer/Technical Writer</p>
-								<p>Techsound Records/Lifeform Recordings/Cubek Label/Miu Recordings/Bad Reputation/Mephyst Label</p>
+								<p>Techsound Records/Lifeform Recordings/Cubek Label/Miu Recordings/Bad
+									Reputation/Mephyst Label</p>
 							</div>
 							<div
 								class="single_player_container d-flex flex-column align-items-start justify-content-center">
