--- a/about.html
+++ b/about.html
@@ -25,7 +25,7 @@
 				<div class="logo"><a href="#">KND</a></div>
 				<div class="log_reg">
 					<ul class="d-flex flex-row align-items-start justify-content-start">
-						
+
 					</ul>
 				</div>
 				<nav class="main_nav">
@@ -71,7 +71,6 @@
 		<!-- Home -->
 		<div class="home">
 			<div class="home_inner">
-				<!-- Image artist: https://unsplash.com/@yoannboyer -->
 				<div class="parallax_background parallax-window" data-parallax="scroll"
 					data-image-src="images/about.jpg" data-speed="0.8"></div>
 				<div class="home_container">
@@ -86,18 +85,16 @@
 		<div class="discs">
 			<div class="container">
 				<div class="row discs_row">
-
 					<!-- Disc -->
 					<div class="col-xl-4 col-md-6">
 						<div class="disc">
 							<a href="single.html">
-								<div class="disc_image"><img src="images/disc_1.jpg"
-										alt="https://unsplash.com/@tanelah"></div>
+								<div class="disc_image"><img src="images/disc_1.jpg" alt="Cover Album"></div>
 								<div class="disc_container">
 									<div>
 										<div class="disc_content_1">
-											<div class="disc_title">Mixtape</div>
-											<div class="disc_subtitle">Music For the People</div>
+											<div class="disc_title">Remixes</div>
+											<div class="disc_subtitle">Remixes that I made for several artists</div>
 										</div>
 									</div>
 								</div>
@@ -116,8 +113,8 @@
 										<div
 											class="disc_content_2 d-flex flex-column align-items-center justify-content-center">
 											<div>
-												<div class="disc_title">Mixtape</div>
-												<div class="disc_subtitle">the world is ours</div>
+												<div class="disc_title">Tracks</div>
+												<div class="disc_subtitle">All my released tracks</div>
 											</div>
 										</div>
 									</div>
@@ -136,8 +133,8 @@
 									<div>
 										<div class="disc_content_3">
 											<div>
-												<div class="disc_title">Mixtape</div>
-												<div class="disc_subtitle">Singles</div>
+												<div class="disc_title">Unreleased</div>
+												<div class="disc_subtitle">Obsolete Music</div>
 											</div>
 										</div>
 									</div>
@@ -145,63 +142,6 @@
 							</a>
 						</div>
 					</div>
-
-					<!-- Disc -->
-					<div class="col-xl-4 col-md-6">
-						<div class="disc">
-							<a href="single.html">
-								<div class="disc_image"><img src="images/disc_4.jpg"
-										alt="https://unsplash.com/@rexcuando"></div>
-								<div class="disc_container">
-									<div>
-										<div
-											class="disc_content_4 d-flex flex-column align-items-start justify-content-end">
-											<div class="text-left">
-												<div class="disc_title">Mixtape</div>
-												<div class="disc_subtitle">1983</div>
-											</div>
-										</div>
-									</div>
-								</div>
-							</a>
-						</div>
-					</div>
-
-					<!-- Disc -->
-					<div class="col-xl-4 col-md-6">
-						<div class="disc">
-							<a href="single.html">
-								<div class="disc_image"><img src="images/disc_5.jpg"
-										alt="https://unsplash.com/@alicemoore"></div>
-								<div class="disc_container">
-									<div>
-										<div class="disc_content_5">
-											<div class="disc_title">Mixtape</div>
-										</div>
-									</div>
-								</div>
-							</a>
-						</div>
-					</div>
-
-					<!-- Disc -->
-					<div class="col-xl-4 col-md-6">
-						<div class="disc">
-							<a href="single.html">
-								<div class="disc_image"><img src="images/disc_6.jpg" alt="https://unsplash.com/@arstyy">
-								</div>
-								<div class="disc_container">
-									<div>
-										<div class="disc_content_6">
-											<div class="disc_title">Mixtape</div>
-											<div class="disc_subtitle">Music For the People</div>
-										</div>
-									</div>
-								</div>
-							</a>
-						</div>
-					</div>
-
 				</div>
 			</div>
 		</div>
