Commit for My personal website

--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
 						<div class="artist_content">
 
 							<div class="artist_text">
-								<p>Dreamer/Producer/Remixer/DJ/Synth Sorcerer/Degree in History/Sofware
+								<p>Dreamer/Producer/Remixer/DJ/Synth Sorcerer/Degree in History/Software
 									Developer/Technical Writer</p>
 								<p>Techsound Records/Lifeform Recordings/Cubek Label/Miu Recordings/Bad
 									Reputation/Mephyst Label</p>
