--- a/index.html
+++ b/index.html
@@ -22,19 +22,17 @@
 		<!-- Header -->
 		<header class="header">
 			<div class="header_content d-flex flex-row align-items-center justify-content-center">
-				<div class="logo"><a href="#">KND</a></div>
+				<div class="logo"><a href="index.html">KND</a></div>
 				<div class="log_reg">
-					<ul class="d-flex flex-row align-items-start justify-content-start">
-
-					</ul>
+					<ul class="d-flex flex-row align-items-start justify-content-start"></ul>
 				</div>
 				<nav class="main_nav">
 					<ul class="d-flex flex-row align-items-start justify-content-start">
 						<li class="active"><a href="index.html">Home</a></li>
 						<li><a href="about.html">Music</a></li>
 						<li><a href="music.html">----</a></li>
-						<li><a href="blog.html">----</a></li>
-						<li><a href="contact.html">----</a></li>
+						<li><a href="#">----</a></li>
+						<li><a href="#">----</a></li>
 					</ul>
 				</nav>
 				<div class="hamburger ml-auto">
@@ -58,8 +56,8 @@
 							<li><a href="index.html">Home</a></li>
 							<li><a href="about.html">Music</a></li>
 							<li><a href="music.html">----</a></li>
-							<li><a href="blog.html">----</a></li>
-							<li><a href="contact.html">----</a></li>
+							<li><a href="#">----</a></li>
+							<li><a href="#">----</a></li>
 						</ul>
 					</nav>
 				</div>
