--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 					<ul class="d-flex flex-row align-items-start justify-content-start">
 						<li class="active"><a href="index.html">Home</a></li>
 						<li><a href="about.html">Music</a></li>
-						<li><a href="music.html">----</a></li>
+						<li><a href="#">----</a></li>
 						<li><a href="#">----</a></li>
 						<li><a href="#">----</a></li>
 					</ul>
@@ -55,7 +55,7 @@
 						<ul class="d-flex flex-column align-items-start justify-content-start">
 							<li><a href="index.html">Home</a></li>
 							<li><a href="about.html">Music</a></li>
-							<li><a href="music.html">----</a></li>
+							<li><a href="#">----</a></li>
 							<li><a href="#">----</a></li>
 							<li><a href="#">----</a></li>
 						</ul>
