Commit for My personal website

--- a/about.html
+++ b/about.html
@@ -160,7 +160,7 @@
 							</div>
 							<div class="artist_text">
 								<p> In the beginning, I used to play and produce IDM, Drum & Bass, and some Hard Trance
-									too. Since 2010 I began to perform and make mostly Techno.</p>
+									too. Since 2010, I began to perform and make mostly Techno and some kind of Electro.</p>
 							</div>
 							<div
 								class="single_player_container d-flex flex-column align-items-start justify-content-center">
