--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-	<link rel="shortcut icon" href="images/logo_title.ico" />
+	<link rel="shortcut icon" href="images/logo_title.ico"/>
 	<title>KND | Music</title>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -103,7 +103,7 @@
 					<!-- Disc -->
 					<div class="col-xl-4 col-md-6">
 						<div class="disc">
-							<a href="single.html">
+							<a href="#">
 								<div class="disc_image"><img src="images/disc_2.jpg"
 										alt="https://unsplash.com/@kasperrasmussen"></div>
 								<div class="disc_container">
@@ -124,7 +124,7 @@
 					<!-- Disc -->
 					<div class="col-xl-4 col-md-6">
 						<div class="disc">
-							<a href="single.html">
+							<a href="#">
 								<div class="disc_image"><img src="images/disc_3.jpg"
 										alt="https://unsplash.com/@photones11"></div>
 								<div class="disc_container">
@@ -160,7 +160,8 @@
 							</div>
 							<div class="artist_text">
 								<p> In the beginning, I used to play and produce IDM, Drum & Bass, and some Hard Trance
-									too. Since 2010, I began to perform and make mostly Techno and some kind of Electro.</p>
+									too. Since 2010, I began to perform and make mostly Techno and some kind of Electro.
+								</p>
 							</div>
 							<div
 								class="single_player_container d-flex flex-column align-items-start justify-content-center">
