Commit for My personal website

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-	<link rel="shortcut icon" href="images/logo_title.ico"/>
+	<link rel="shortcut icon" href="images/logo_title.ico" />
 	<title>KND</title>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -29,7 +29,7 @@
 				<nav class="main_nav">
 					<ul class="d-flex flex-row align-items-start justify-content-start">
 						<li class="active"><a href="index.html">Home</a></li>
-						<li><a href="about.html">Music</a></li>
+						<li><a href="music.html">Music</a></li>
 						<li><a href="#">----</a></li>
 						<li><a href="#">----</a></li>
 						<li><a href="#">----</a></li>
@@ -54,7 +54,7 @@
 					<nav class="menu_nav">
 						<ul class="d-flex flex-column align-items-start justify-content-start">
 							<li><a href="index.html">Home</a></li>
-							<li><a href="about.html">Music</a></li>
+							<li><a href="music.html">Music</a></li>
 							<li><a href="#">----</a></li>
 							<li><a href="#">----</a></li>
 							<li><a href="#">----</a></li>
