Commit for My personal website

--- a/index.html
+++ b/index.html
@@ -367,6 +367,10 @@
 					artwork by Mauricio Drada Dávila | This template is made with <i class="fa fa-heart-o"
 						aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
 				</span>
+				<!-- hitwebcounter Code START -->
+<a href="https://www.hitwebcounter.com" target="_blank">
+	<img src="https://hitwebcounter.com/counter/counter.php?page=7537107&style=0001&nbdigits=5&type=page&initCount=0" title="Web Counter" Alt="counter free"   border="0" >
+	</a>  
 			</div>
 		</footer>
 	</div>
