--- a/remixes.html
+++ b/remixes.html
@@ -352,9 +352,7 @@
 				<div class="row">
 					<div class="col">
 						<div class="video_container">
-							<iframe width="560" height="315"
-								src="https://www.youtube.com/embed/OsKLytDnKGA?rel=0&amp;showinfo=0" frameborder="0"
-								allow="autoplay; encrypted-media" allowfullscreen></iframe>
+							<iframe width="791" height="473" src="https://www.youtube.com/embed/vnb24tfJM6E" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 						</div>
 					</div>
 				</div>
