--- a/remixes.html
+++ b/remixes.html
@@ -91,10 +91,14 @@
 						<div class="single_info">
 							<div class="single_image"><img src="images/single_image.jpg" alt=""></div>
 							<div class="logo_list d-flex flex-row align-items-center justify-content-start flex-wrap">
-								<div><a href="https://www.beatport.com/artist/k-n-d/400425/tracks" target="_blank"><img src="images/logo_1.png" alt=""></a></div>
-								<div><a href="https://soundcloud.com/k-n-d" target="_blank"><img src="images/logo_2.png" alt=""></a></div>
-								<div><a href="https://mauriciodradaknd.bandcamp.com/" target="_blank"><img src="images/logo_3.png" alt=""></a></div>
-								<div><a href="https://open.spotify.com/artist/1qiGwPf5UswgSQYJ3w84nc?si=DcYUPeJBTJeKw6gEUKh6jg" target="_blank"><img src="images/logo_4.png" alt=""></a></div>
+								<div><a href="https://www.beatport.com/artist/k-n-d/400425/tracks" target="_blank"><img
+											src="images/logo_1.png" alt=""></a></div>
+								<div><a href="https://soundcloud.com/k-n-d" target="_blank"><img src="images/logo_2.png"
+											alt=""></a></div>
+								<div><a href="https://mauriciodradaknd.bandcamp.com/" target="_blank"><img
+											src="images/logo_3.png" alt=""></a></div>
+								<div><a href="https://open.spotify.com/artist/1qiGwPf5UswgSQYJ3w84nc?si=DcYUPeJBTJeKw6gEUKh6jg"
+										target="_blank"><img src="images/logo_4.png" alt=""></a></div>
 							</div>
 						</div>
 					</div>
@@ -352,7 +356,10 @@
 				<div class="row">
 					<div class="col">
 						<div class="video_container">
-							<iframe width="791" height="473" src="https://www.youtube.com/embed/vnb24tfJM6E" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+							<iframe width="791" height="473" src="https://www.youtube.com/embed/vnb24tfJM6E"
+								frameborder="0"
+								allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+								allowfullscreen></iframe>
 						</div>
 					</div>
 				</div>
