--- a/index.html
+++ b/index.html
@@ -292,6 +292,8 @@
 								<p>Techsound Records/Lifeform Recordings/Cubek Label/Miu Recordings/Bad
 									Reputation/Mephyst Label</p>
 							</div>
+
+							<!-- Single Player 1-->
 							<div
 								class="single_player_container d-flex flex-column align-items-start justify-content-center">
 								<div class="single_player">
@@ -352,6 +354,69 @@
 
 								</div>
 							</div>
+
+							<!-- Single Player 2-->
+							<div
+								class="single_player_container d-flex flex-column align-items-start justify-content-center">
+								<div class="single_player">
+									<div class="featured_album_link ml-auto"><a
+											href="https://www.beatport.com/track/i-miss-you-original-mix/7670355"
+											target="_blank">buy it on Beatport</a></div>
+									<div id="jplayer_3" class="jp-jplayer"></div>
+									<div id="jp_container_3" class="jp-audio" role="application"
+										aria-label="media player">
+										<div class="jp-type-single">
+											<div
+												class="player_details d-flex flex-row align-items-center justify-content-start">
+												<div class="jp-details">
+													<div>playing</div>
+													<div class="jp-title" aria-label="title">&nbsp;</div>
+												</div>
+												<div class="jp-controls-holder ml-auto">
+													<button class="jp-play" tabindex="0"></button>
+												</div>
+											</div>
+											<div class="player_controls">
+												<div
+													class="jp-gui jp-interface d-flex flex-row align-items-center justify-content-start">
+													<div
+														class="jp-controls-holder time_controls d-flex flex-row align-items-center justify-content-start">
+														<div>
+															<div class="jp-current-time" role="timer" aria-label="time">
+																&nbsp;</div>
+														</div>
+														<div class="jp-progress">
+															<div class="jp-seek-bar">
+																<div class="jp-play-bar"></div>
+															</div>
+														</div>
+														<div>
+															<div class="jp-duration ml-auto" role="timer"
+																aria-label="duration">&nbsp;</div>
+														</div>
+													</div>
+													<div
+														class="jp-volume-controls d-flex flex-row align-items-center justify-content-start ml-auto">
+														<button class="jp-mute" tabindex="0"></button>
+														<div class="jp-volume-bar">
+															<div class="jp-volume-bar-value"></div>
+														</div>
+													</div>
+												</div>
+											</div>
+											<div class="jp-no-solution">
+												<span>Update Required</span>
+												To play the media you will need to either update your browser to a
+												recent version or update your <a
+													href="http://get.adobe.com/flashplayer/" target="_blank">Flash
+													plugin</a>
+											</div>
+										</div>
+									</div>
+
+								</div>
+							</div>
+							
 						</div>
 					</div>
 
