Commir for jplayers

--- a/index.html
+++ b/index.html
@@ -416,7 +416,7 @@
 
 								</div>
 							</div>
-							
+
 						</div>
 					</div>
 
@@ -433,9 +433,10 @@
 						aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
 				</span>
 				<!-- hitwebcounter Code START -->
-<a href="https://www.hitwebcounter.com" target="_blank">
-	<img src="https://hitwebcounter.com/counter/counter.php?page=7537107&style=0001&nbdigits=5&type=page&initCount=0" title="Web Counter" Alt="counter free"   border="0" >
-	</a>  
+				<a href="https://www.hitwebcounter.com" target="_blank">
+					<img src="https://hitwebcounter.com/counter/counter.php?page=7537107&style=0001&nbdigits=5&type=page&initCount=0"
+						title="Web Counter" Alt="counter free" border="0">
+				</a>
 			</div>
 		</footer>
 	</div>
