Commit for jplayers

--- a/music.html
+++ b/music.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-	<link rel="shortcut icon" href="images/logo_title.ico"/>
+	<link rel="shortcut icon" href="images/logo_title.ico" />
 	<title>KND | Music</title>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -166,10 +166,13 @@
 							<div
 								class="single_player_container d-flex flex-column align-items-start justify-content-center">
 								<iframe width="100%" height="120"
-									src="https://www.mixcloud.com/widget/iframe/?hide_cover=1&light=1&feed=%2Fmauriciodrada%2Ftechno-for-quarantine%2F"
+									src="https://www.mixcloud.com/widget/iframe/?hide_cover=1&feed=%2Fmauriciodrada%2Ftechno-for-quarantine%2F"
 									frameborder="0"></iframe>
 								<iframe width="100%" height="120"
-									src="https://www.mixcloud.com/widget/iframe/?hide_cover=1&light=1&feed=%2Fmauriciodrada%2Fhelloworld2020%2F"
+									src="https://www.mixcloud.com/widget/iframe/?hide_cover=1&feed=%2Fmauriciodrada%2Fhelloworld2020%2F"
+									frameborder="0"></iframe>
+								<iframe width="100%" height="120"
+									src="https://www.mixcloud.com/widget/iframe/?hide_cover=1&feed=%2FMidnightColectivoAudivisual%2Fknd-at-local-techno-scene-by-midnight%2F"
 									frameborder="0"></iframe>
 							</div>
 						</div>
