Adding Resume Section

--- a/index_Resume.html
+++ b/index_Resume.html
@@ -52,9 +52,14 @@
 			<div class="row intro-text align-items-center justify-content-center">
 				<div class="col-md-10 text-center pt-5">
 
-					<h1 class="site-heading site-animate">Mauricio Drada Dávila <strong class="d-block"></strong>
+					<h1 class="site-heading site-animate">Mauricio Drada Dávila
+						<h2 class="d-block text-white text-uppercase letter-spacing">About Me</h2>
 					</h1>
-					<strong class="d-block text-white text-uppercase letter-spacing"> </strong>
+					<strong class="d-block text-white text-uppercase letter-spacing">I'm a Savvy Software Engineer,
+						skilled, and eager to learn. Experienced in programming by several environments, applications,
+						and technologies, with knowledge of DevOps workflows, also git tools. I have a background in
+						Digital Audio Workstations (DAWs), MIDI sequencing with analog instruments plus, writing,
+						performing, recording, and mixing original electronic music.</strong>
 
 				</div>
 			</div>
@@ -574,15 +579,17 @@
 	<footer class="site-footer">
 		<div class="container">
 
-			<div class="row mb-5">
-				<p class="col-12 text-center">
-					<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-					Copyright &copy;
-					<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is
-					made with <i class="icon-heart text-danger" aria-hidden="true"></i> by <a
-						href="https://colorlib.com" target="_blank" class="text-primary">Colorlib</a>
-					<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-				</p>
+			<div class="copyright_bar">
+				<span>Copyright &copy;
+					<script>document.write(new Date().getFullYear());</script> All rights reserved | Music and
+					artwork by Mauricio Drada Dávila | This template is made with <i class="fa fa-heart-o"
+						aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
+				</span>
+				<!-- hitwebcounter Code START -->
+				<a href="https://www.hitwebcounter.com" target="_blank">
+					<img src="https://hitwebcounter.com/counter/counter.php?page=7537107&style=0001&nbdigits=5&type=page&initCount=0"
+						title="Web Counter" Alt="counter free" border="0">
+				</a>
 			</div>
 
 			<div class="row mb-5">
@@ -615,7 +622,7 @@
 
 	<script src="https://unpkg.com/isotope-layout@3/dist/isotope.pkgd.min.js"></script>
 	<script src="https://unpkg.com/imagesloaded@4/imagesloaded.pkgd.min.js"></script>
-	<script src="js/custom.js"></script>
+	<script src="js/custom_Resume.js"></script>
 
 	<!-- Google Map -->
 	<!-- <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBVWaKrjvy3MaE7SQ74_uJiULgl1JY0H2s&sensor=false"></script>
