Adding Resume Section

--- a/index_Resume.html
+++ b/index_Resume.html
@@ -53,13 +53,10 @@
 				<div class="col-md-10 text-center pt-5">
 
 					<h1 class="site-heading site-animate">Mauricio Drada Dávila
-						<h2 class="d-block text-white text-uppercase letter-spacing">About Me</h2>
+						<h2 class="d-block text-white text-uppercase letter-spacing">Software Engineer | Degree in
+							History | Electronic Music Producer/Remixer | Dj</h2>
 					</h1>
-					<strong class="d-block text-white text-uppercase letter-spacing">I'm a Savvy Software Engineer,
-						skilled, and eager to learn. Experienced in programming by several environments, applications,
-						and technologies, with knowledge of DevOps workflows, also git tools. I have a background in
-						Digital Audio Workstations (DAWs), MIDI sequencing with analog instruments plus, writing,
-						performing, recording, and mixing original electronic music.</strong>
+					<strong class="d-block text-white text-uppercase letter-spacing"></strong>
 
 				</div>
 			</div>
@@ -296,17 +293,18 @@
 		<div class="container">
 			<div class="row mb-5 align-items-center">
 				<div class="col-lg-7 pr-lg-5 mb-5 mb-lg-0">
-					<img src="images/image_1.jpg" alt="Image placeholder" class="img-fluid">
+					<img src="images/image_1.jpeg" alt="Image placeholder" class="img-fluid">
 				</div>
 				<div class="col-lg-5 pl-lg-5">
 					<div class="section-heading">
 						<h2>About <strong>Me</strong></h2>
 					</div>
-					<p class="lead">Separated they live in Bookmarksgrove right at the coast of the Semantics, a large
-						language ocean.</p>
-					<p class="mb-5  ">A small river named Duden flows by their place and supplies it with the necessary
-						regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your
-						mouth.</p>
+					<p class="lead">I'm a Savvy Software Engineer,
+						skilled, and eager to learn. Experienced in programming by several environments, applications,
+						and technologies, with knowledge of DevOps workflows, also git tools. I have a background in
+						Digital Audio Workstations (DAWs), MIDI sequencing with analog instruments plus, writing,
+						performing, recording, and mixing original electronic music.</p>
+					<p class="mb-5  "></p>
 
 					<p>
 						<a href="#section-contact" class="btn btn-primary px-4 py-2 btn-sm smoothscroll">Hire Me</a>
