Adding Resume Section

--- a/index_Resume.html
+++ b/index_Resume.html
@@ -78,10 +78,10 @@
 			<div class="filters">
 				<ul>
 					<li class="active" data-filter="*">All</li>
-					<li data-filter=".packaging">Packaging</li>
-					<li data-filter=".mockup">Mockup</li>
-					<li data-filter=".typography">Typography</li>
-					<li data-filter=".photography">Photography</li>
+					<li data-filter=".packaging">Web Applications</li>
+					<li data-filter=".mockup">Java Applications</li>
+					<li data-filter=".typography">Social Sciences Researching</li>
+					<li data-filter=".photography">Electronic Music</li>
 				</ul>
 			</div>
 
@@ -91,9 +91,9 @@
 						<div class="relative">
 							<div class="thumb">
 								<div class="overlay overlay-bg"></div>
-								<img class="image img-fluid" src="images/p1.jpg" alt="">
+								<img class="image img-fluid" src="images/p2.png" alt="">
 							</div>
-							<a href="images/p1.jpg" class="img-pop-up">
+							<a href="https://github.com/Mauricio-KND/SYNTHSZR" target="_blank" class="img-pop-up">
 								<div class="middle">
 									<div class="text align-self-center d-flex"><img src="images/preview.png" alt="">
 									</div>
@@ -101,17 +101,19 @@
 							</a>
 						</div>
 						<div class="p-inner">
-							<h4>Square Box Mockup</h4>
-							<div class="cat">Mockup</div>
+							<h4>Modular Frequency Synthesizer</h4>
+							<h6>Synthesize (DSP), and stream digital audio with LWJGL Java library API (OpenAL). Coded
+								with IntelliJ IDEA.</h6>
+							<div class="cat">Java Applications</div>
 						</div>
 					</div>
 					<div class="single-portfolio col-sm-4 all mockup">
 						<div class="relative">
 							<div class="thumb">
 								<div class="overlay overlay-bg"></div>
-								<img class="image img-fluid" src="images/p2.jpg" alt="">
+								<img class="image img-fluid" src="images/p3.png" alt="">
 							</div>
-							<a href="images/p2.jpg" class="img-pop-up">
+							<a href="https://github.com/Mauricio-KND/Java_API" target="_blank" class="img-pop-up">
 								<div class="middle">
 									<div class="text align-self-center d-flex"><img src="images/preview.png" alt="">
 									</div>
@@ -119,17 +121,18 @@
 							</a>
 						</div>
 						<div class="p-inner">
-							<h4>Product Box Package Mockup</h4>
-							<div class="cat">Mockup</div>
+							<h4>API REST</h4>
+							<h6>Builded with Java, Tomcat, and JAX-RS implementation. Coded with Eclipse IDE</h6>
+							<div class="cat">Java Applications</div>
 						</div>
 					</div>
 					<div class="single-portfolio col-sm-4 all packaging">
 						<div class="relative">
 							<div class="thumb">
 								<div class="overlay overlay-bg"></div>
-								<img class="image img-fluid" src="images/p3.jpg" alt="">
+								<img class="image img-fluid" src="images/p1.png" alt="">
 							</div>
-							<a href="images/p3.jpg" class="img-pop-up">
+							<a href="https://github.com/Gaspela04/Nativo" target="_blank" class="img-pop-up">
 								<div class="middle">
 									<div class="text align-self-center d-flex"><img src="images/preview.png" alt="">
 									</div>
@@ -138,8 +141,9 @@
 
 						</div>
 						<div class="p-inner">
-							<h4>Creative Package Design</h4>
-							<div class="cat">Packaging</div>
+							<h4>NATIVO</h4>
+							<h6>Builded with MEAN Stack Framework: NodeJs, Angular-9, MongoDB, and HTML</h6>
+							<div class="cat">Web Applications</div>
 						</div>
 					</div>
 					<div class="single-portfolio col-sm-4 all packaging">
@@ -148,7 +152,7 @@
 								<div class="overlay overlay-bg"></div>
 								<img class="image img-fluid" src="images/p4.jpg" alt="">
 							</div>
-							<a href="images/p4.jpg" class="img-pop-up">
+							<a href="https://github.com/Mauricio-KND/Mauricio-KND.github.io" target="_blank" class="img-pop-up">
 								<div class="middle">
 									<div class="text align-self-center d-flex"><img src="images/preview.png" alt="">
 									</div>
@@ -164,9 +168,10 @@
 						<div class="relative">
 							<div class="thumb">
 								<div class="overlay overlay-bg"></div>
-								<img class="image img-fluid" src="images/p5.jpg" alt="">
+								<img class="image img-fluid" src="images/p5.png" alt="">
 							</div>
-							<a href="images/p5.jpg" class="img-pop-up">
+							<a href="https://drive.google.com/file/d/1UGqaf3NONo3BRxVs30hpOxUI3eGGk6yM/view?usp=sharing"
+								target="_blank" class="img-pop-up">
 								<div class="middle">
 									<div class="text align-self-center d-flex"><img src="images/preview.png" alt="">
 									</div>
@@ -174,8 +179,8 @@
 							</a>
 						</div>
 						<div class="p-inner">
-							<h4>Isometric 3D Extrusion</h4>
-							<div class="cat">Typography</div>
+							<h4>Sound elements in the work of Feliza Bursztyn. 1970 - 1980</h4>
+							<div class="cat">Social Sciences Researching</div>
 						</div>
 					</div>
 					<div class="single-portfolio col-sm-4 all photography">
