Adding Resume Section

--- a/index_Resume.html
+++ b/index_Resume.html
@@ -15,12 +15,9 @@
 
 	<link href="https://fonts.googleapis.com/css?family=Nunito+Sans:200,300,400,700" rel="stylesheet">
 
-
 </head>
 
-<body data-spy="scroll" data-target="#pb-navbar" data-offset="200">
-
-
+<body data-spy="scroll" data-target="#pb-navbar" data-offset="200">ç
 
 	<nav class="navbar navbar-expand-lg site-navbar navbar-light bg-light" id="pb-navbar">
 
@@ -43,9 +40,6 @@
 		</div>
 	</nav>
 
-
-
-
 	<section class="site-hero" style="background-image: url(images/image_1.png);" id="section-home"
 		data-stellar-background-ratio="0.5">
 		<div class="container">
@@ -62,11 +56,6 @@
 			</div>
 		</div>
 	</section> <!-- section -->
-
-
-
-
-
 
 	<section class="site-section" id="section-portfolio">
 		<div class="container">
@@ -103,7 +92,7 @@
 						<div class="p-inner">
 							<h4>Modular Frequency Synthesizer</h4>
 							<h6>Synthesize (DSP), and stream digital audio with LWJGL Java library API (OpenAL). Coded
-								with IntelliJ IDEA.</h6>
+								with IntelliJ IDEA</h6>
 							<div class="cat">Java Applications</div>
 						</div>
 					</div>
@@ -150,9 +139,10 @@
 						<div class="relative">
 							<div class="thumb">
 								<div class="overlay overlay-bg"></div>
-								<img class="image img-fluid" src="images/p4.jpg" alt="">
+								<img class="image img-fluid" src="images/p4.png" alt="">
 							</div>
-							<a href="https://github.com/Mauricio-KND/Mauricio-KND.github.io" target="_blank" class="img-pop-up">
+							<a href="https://github.com/Mauricio-KND/Mauricio-KND.github.io" target="_blank"
+								class="img-pop-up">
 								<div class="middle">
 									<div class="text align-self-center d-flex"><img src="images/preview.png" alt="">
 									</div>
@@ -160,8 +150,9 @@
 							</a>
 						</div>
 						<div class="p-inner">
-							<h4>Packaging Brand</h4>
-							<div class="cat">Packaging</div>
+							<h4>My Personal Web Site</h4>
+							<h6>Builded with CSS, JavaScript, and HTML</h6>
+							<div class="cat">Web Applications</div>
 						</div>
 					</div>
 					<div class="single-portfolio col-sm-4 all typography">
@@ -179,7 +170,7 @@
 							</a>
 						</div>
 						<div class="p-inner">
-							<h4>Sound elements in the work of Feliza Bursztyn. 1970 - 1980</h4>
+							<h4>Sound elements in the work of Feliza Bursztyn 1970 - 1980</h4>
 							<div class="cat">Social Sciences Researching</div>
 						</div>
 					</div>
@@ -187,9 +178,9 @@
 						<div class="relative">
 							<div class="thumb">
 								<div class="overlay overlay-bg"></div>
-								<img class="image img-fluid" src="images/p6.jpg" alt="">
+								<img class="image img-fluid" src="images/p6.png" alt="">
 							</div>
-							<a href="images/p6.jpg" class="img-pop-up">
+							<a href="https://Mauricio-KND.github.io" target="_blank" class="img-pop-up">
 								<div class="middle">
 									<div class="text align-self-center d-flex"><img src="images/preview.png" alt="">
 									</div>
@@ -197,8 +188,9 @@
 							</a>
 						</div>
 						<div class="p-inner">
-							<h4>White Space Photography</h4>
-							<div class="cat">photography</div>
+							<h4>KND</h4>
+							<h6>My Project as an Artist</h6>
+							<div class="cat">Electronic Music</div>
 						</div>
 					</div>
 				</div>
@@ -206,93 +198,6 @@
 		</div>
 	</section>
 	<!-- .section -->
-
-
-	<section class="site-section " id="section-resume">
-		<div class="container">
-			<div class="row">
-				<div class="col-md-12 mb-5">
-					<div class="section-heading text-center">
-						<h2>My <strong>Resume</strong></h2>
-					</div>
-				</div>
-				<div class="col-md-6">
-					<h2 class="mb-5">Education</h2>
-					<div class="resume-item mb-4">
-						<span class="date"><span class="icon-calendar"></span> March 2013 - Present</span>
-						<h3>Masteral in Information Technology</h3>
-						<p>Even the all-powerful Pointing has no control about the blind texts it is an almost
-							unorthographic.</p>
-						<span class="school">New York University</span>
-					</div>
-
-					<div class="resume-item mb-4">
-						<span class="date"><span class="icon-calendar"></span> March 2013 - Present Deacember.</span>
-						<h3>Masteral in Information Technology</h3>
-						<p>Even the all-powerful Pointing has no control about the blind texts it is an almost
-							unorthographic.</p>
-						<span class="school">New York University</span>
-					</div>
-
-					<div class="resume-item mb-4">
-						<span class="date"><span class="icon-calendar"></span> March 2013 - Present</span>
-						<h3>Masteral in Information Technology</h3>
-						<p>Even the all-powerful Pointing has no control about the blind texts it is an almost
-							unorthographic.</p>
-						<span class="school">New York University</span>
-					</div>
-
-					<div class="resume-item mb-4">
-						<span class="date"><span class="icon-calendar"></span> March 2013 - Present Deacember.</span>
-						<h3>Masteral in Information Technology</h3>
-						<p>Even the all-powerful Pointing has no control about the blind texts it is an almost
-							unorthographic.</p>
-						<span class="school">New York University</span>
-					</div>
-
-				</div>
-				<div class="col-md-6">
-
-
-					<h2 class="mb-5">Experience</h2>
-
-					<div class="resume-item mb-4">
-						<span class="date"><span class="icon-calendar"></span> March 2013 - Present</span>
-						<h3>Lead Product Designer</h3>
-						<p>Even the all-powerful Pointing has no control about the blind texts it is an almost
-							unorthographic.</p>
-						<span class="school">Github</span>
-					</div>
-
-					<div class="resume-item mb-4">
-						<span class="date"><span class="icon-calendar"></span> March 2013 - Present</span>
-						<h3>Lead Product Designer</h3>
-						<p>Even the all-powerful Pointing has no control about the blind texts it is an almost
-							unorthographic.</p>
-						<span class="school">Facebook</span>
-					</div>
-
-					<div class="resume-item mb-4">
-						<span class="date"><span class="icon-calendar"></span> March 2013 - Present</span>
-						<h3>Lead Product Designer</h3>
-						<p>Even the all-powerful Pointing has no control about the blind texts it is an almost
-							unorthographic.</p>
-						<span class="school">Twitter</span>
-					</div>
-
-					<div class="resume-item mb-4">
-						<span class="date"><span class="icon-calendar"></span> March 2013 - Present</span>
-						<h3>Lead Product Designer</h3>
-						<p>Even the all-powerful Pointing has no control about the blind texts it is an almost
-							unorthographic.</p>
-						<span class="school">Shopify</span>
-					</div>
-
-
-				</div>
-			</div>
-		</div>
-	</section> <!-- .section -->
 
 	<section class="site-section" id="section-about">
 		<div class="container">
@@ -310,213 +215,13 @@
 						Digital Audio Workstations (DAWs), MIDI sequencing with analog instruments plus, writing,
 						performing, recording, and mixing original electronic music.</p>
 					<p class="mb-5  "></p>
-
 					<p>
-						<a href="#section-contact" class="btn btn-primary px-4 py-2 btn-sm smoothscroll">Hire Me</a>
-						<a href="#" class="btn btn-secondary px-4 py-2 btn-sm">Download CV</a>
+						<a href="https://drive.google.com/file/d/11La7j9C7kZmGn6o_Bg_Q3HIAVz1Y4pjH/view?usp=sharing"
+							target="_blank" class="btn btn-primary px-4 py-2 btn-sm smoothscroll">View resume</a>
+						<a href="https://drive.google.com/file/d/11La7j9C7kZmGn6o_Bg_Q3HIAVz1Y4pjH/view?usp=sharing"
+							target="_blank" class="btn btn-light">Download Resume</a>
 					</p>
 				</div>
-			</div>
-
-
-		</div>
-	</section>
-
-	<section class="site-section">
-		<div class="container">
-			<div class="row mb-5">
-				<div class="col-md-12">
-					<div class="section-heading text-center">
-						<h2>Client <strong>Testimonial</strong></h2>
-					</div>
-				</div>
-			</div>
-			<div class="row">
-				<div class="col-md-6">
-
-					<div class="block-47 d-flex mb-5">
-						<div class="block-47-image">
-							<img src="images/person_1.jpg" alt="Image placeholder" class="img-fluid">
-						</div>
-						<blockquote class="block-47-quote">
-							<p>&ldquo;Far far away, behind the word mountains, far from the countries Vokalia and
-								Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at
-								the coast of the Semantics, a large language ocean.&rdquo;</p>
-							<cite class="block-47-quote-author">&mdash; Ethan McCown, CEO <a href="#">XYZ
-									Inc.</a></cite>
-						</blockquote>
-					</div>
-
-				</div>
-				<div class="col-md-6">
-
-					<div class="block-47 d-flex mb-5">
-						<div class="block-47-image">
-							<img src="images/person_2.jpg" alt="Image placeholder" class="img-fluid">
-						</div>
-						<blockquote class="block-47-quote">
-							<p>&ldquo;Far far away, behind the word mountains, far from the countries Vokalia and
-								Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at
-								the coast of the Semantics, a large language ocean.&rdquo;</p>
-							<cite class="block-47-quote-author">&mdash; Craig Gowen, CEO <a href="#">XYZ Inc.</a></cite>
-						</blockquote>
-					</div>
-
-				</div>
-
-				<div class="col-md-6">
-
-					<div class="block-47 d-flex mb-5">
-						<div class="block-47-image">
-							<img src="images/person_3.jpg" alt="Image placeholder" class="img-fluid">
-						</div>
-						<blockquote class="block-47-quote">
-							<p>&ldquo;Far far away, behind the word mountains, far from the countries Vokalia and
-								Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at
-								the coast of the Semantics, a large language ocean.&rdquo;</p>
-							<cite class="block-47-quote-author">&mdash; Ethan McCown, CEO <a href="#">XYZ
-									Inc.</a></cite>
-						</blockquote>
-					</div>
-
-				</div>
-				<div class="col-md-6">
-
-					<div class="block-47 d-flex mb-5">
-						<div class="block-47-image">
-							<img src="images/person_4.jpg" alt="Image placeholder" class="img-fluid">
-						</div>
-						<blockquote class="block-47-quote">
-							<p>&ldquo;Far far away, behind the word mountains, far from the countries Vokalia and
-								Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at
-								the coast of the Semantics, a large language ocean.&rdquo;</p>
-							<cite class="block-47-quote-author">&mdash; Craig Gowen, CEO <a href="#">XYZ Inc.</a></cite>
-						</blockquote>
-					</div>
-
-				</div>
-
-			</div>
-		</div>
-	</section>
-
-
-	<section class="site-section pb-0" id="section-services">
-		<div class="container">
-
-			<div class="row mb-4">
-				<div class="col-md-12">
-					<div class="section-heading text-center">
-						<h2>My <strong>Services</strong></h2>
-					</div>
-				</div>
-			</div>
-			<div class="row">
-
-				<div class="col-md-6 col-lg-4 text-center mb-5">
-					<div class="site-service-item site-animate" data-animate-effect="fadeIn">
-						<span class="icon">
-							<span class="icon-browser2"></span>
-						</span>
-						<h3 class="mb-4">Web Design</h3>
-						<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia,
-							there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the
-							Semantics, a large language ocean.</p>
-						<p><a href="#" class="site-link">Learn More <i class="icon-chevron-right"></i></a></p>
-					</div>
-				</div>
-				<div class="col-md-6 col-lg-4 text-center mb-5">
-					<div class="site-service-item site-animate" data-animate-effect="fadeIn">
-						<span class="icon">
-							<span class="icon-presentation"></span>
-						</span>
-						<h3 class="mb-4">Search Engine Optimization</h3>
-						<p>A small river named Duden flows by their place and supplies it with the necessary regelialia.
-							It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
-						<p><a href="#" class="site-link">Learn More <i class="icon-chevron-right"></i></a></p>
-					</div>
-				</div>
-				<div class="col-md-6 col-lg-4 text-center mb-5">
-					<div class="site-service-item site-animate" data-animate-effect="fadeIn">
-						<span class="icon">
-							<span class="icon-video2"></span>
-						</span>
-						<h3 class="mb-4">Video Editing</h3>
-						<p>Even the all-powerful Pointing has no control about the blind texts it is an almost
-							unorthographic life One day however a small line of blind text by the name of Lorem Ipsum
-							decided to leave for the far World of Grammar.</p>
-						<p><a href="#" class="site-link">Learn More <i class="icon-chevron-right"></i></a></p>
-					</div>
-				</div>
-
-
-
-			</div>
-		</div>
-	</section>
-
-
-
-
-	<section class="site-section" id="section-blog">
-		<div class="container">
-			<div class="row">
-				<div class="col-md-12 mb-5">
-					<div class="section-heading text-center">
-						<h2>Blog on <strong>Medium</strong></h2>
-					</div>
-				</div>
-			</div>
-
-			<div class="row">
-				<div class="col-sm-6 col-lg-4 mb-4">
-					<div class="blog-entry">
-						<a href="#"><img src="images/post_1.jpg" alt="Image placeholder" class="img-fluid"></a>
-						<div class="blog-entry-text">
-							<h3><a href="#">Creative Product Designer From Facebook</a></h3>
-							<p class="mb-4">Even the all-powerful Pointing has no control about the blind texts it is an
-								almost unorthographic.</p>
-
-							<div class="meta">
-								<a href="#"><span class="icon-calendar"></span> Aug 7, 2018</a>
-								<a href="#"><span class="icon-bubble"></span> 5 Comments</a>
-							</div>
-						</div>
-					</div>
-				</div>
-
-				<div class="col-sm-6 col-lg-4 mb-4">
-					<div class="blog-entry">
-						<a href="#"><img src="images/post_2.jpg" alt="Image placeholder" class="img-fluid"></a>
-						<div class="blog-entry-text">
-							<h3><a href="#">Creative Product Designer From Facebook</a></h3>
-							<p class="mb-4">Even the all-powerful Pointing has no control about the blind texts it is an
-								almost unorthographic.</p>
-
-							<div class="meta">
-								<a href="#"><span class="icon-calendar"></span> Aug 7, 2018</a>
-								<a href="#"><span class="icon-bubble"></span> 5 Comments</a>
-							</div>
-						</div>
-					</div>
-				</div>
-
-				<div class="col-sm-6 col-lg-4 mb-4">
-					<div class="blog-entry">
-						<a href="#"><img src="images/post_3.jpg" alt="Image placeholder" class="img-fluid"></a>
-						<div class="blog-entry-text">
-							<h3><a href="#">Creative Product Designer From Facebook</a></h3>
-							<p class="mb-4">Even the all-powerful Pointing has no control about the blind texts it is an
-								almost unorthographic.</p>
-
-							<div class="meta">
-								<a href="#"><span class="icon-calendar"></span> Aug 7, 2018</a>
-								<a href="#"><span class="icon-bubble"></span> 5 Comments</a>
-							</div>
-						</div>
-					</div>
-				</div>
-
 			</div>
 		</div>
 	</section>
@@ -539,9 +244,6 @@
 						<div class="form-group">
 							<input type="email" class="form-control px-3 py-4" placeholder="Your Email">
 						</div>
-						<div class="form-group">
-							<input type="email" class="form-control px-3 py-4" placeholder="Your Phone">
-						</div>
 						<div class="form-group mb-5">
 							<textarea class="form-control px-3 py-4" cols="30" rows="10"
 								placeholder="Write a Message"></textarea>
@@ -556,21 +258,15 @@
 					<ul class="site-contact-details">
 						<li>
 							<span class="text-uppercase">Email</span>
-							site@gmail.com
+							mauriciodradadavila@gmail.com
 						</li>
 						<li>
 							<span class="text-uppercase">Phone</span>
-							+30 976 1382 9921
+							+57 310 284 1994
 						</li>
 						<li>
-							<span class="text-uppercase">Fax</span>
-							+30 976 1382 9922
-						</li>
-						<li>
-							<span class="text-uppercase">Address</span>
-							San Francisco, CA <br>
-							4th Floor8 Lower <br>
-							San Francisco street, M1 50F
+							<span class="text-uppercase">Location</span>
+							Cali, Colombia <br>
 						</li>
 					</ul>
 				</div>
@@ -581,7 +277,6 @@
 
 	<footer class="site-footer">
 		<div class="container">
-
 			<div class="copyright_bar">
 				<span>Copyright &copy;
 					<script>document.write(new Date().getFullYear());</script> All rights reserved | Music and
@@ -598,20 +293,15 @@
 			<div class="row mb-5">
 				<div class="col-md-12 text-center">
 					<p>
-						<a href="#" class="social-item"><span class="icon-facebook2"></span></a>
-						<a href="#" class="social-item"><span class="icon-twitter"></span></a>
-						<a href="#" class="social-item"><span class="icon-instagram2"></span></a>
+						<a href="https://www.facebook.com/Mauricio.Drada" target="_blank" class="social-item"><span class="icon-facebook2"></span></a>
+						<a href="https://twitter.com/drada_mauricio" class="social-item"><span class="icon-twitter"></span></a>
+						<a href="https://www.instagram.com/mdradadavila_aka_knd/" class="social-item"><span class="icon-instagram2"></span></a>
 						<a href="#" class="social-item"><span class="icon-linkedin2"></span></a>
-						<a href="#" class="social-item"><span class="icon-vimeo"></span></a>
 					</p>
 				</div>
 			</div>
-
 		</div>
 	</footer>
-
-
-
 
 	<script src="js/vendor/jquery.min.js"></script>
 	<script src="js/vendor/jquery-migrate-3.0.1.min.js"></script>
