--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 					<li class="nav-item"><a class="nav-link" href="#section-resume">Resume</a></li>
 					<li class="nav-item"><a class="nav-link" href="#section-about">About</a></li>
 					<li class="nav-item"><a class="nav-link" href="#section-contact">Contact</a></li>
-					<li class="nav-item"><a class="nav-link" href="KND.html" target="_blank" >KND</a></li>
+					<li class="nav-item"><a class="nav-link" href="https://mauricio-knd.github.io/KND.html" target="_blank" >KND</a></li>
 				</ul>
 			</div>
 		</div>
