--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 </head>
 
-<body data-spy="scroll" data-target="#pb-navbar" data-offset="200">ç
+<body data-spy="scroll" data-target="#pb-navbar" data-offset="200">
 
 	<nav class="navbar navbar-expand-lg site-navbar navbar-light bg-light" id="pb-navbar">
 
@@ -35,7 +35,6 @@
 					<li class="nav-item"><a class="nav-link" href="#section-resume">Resume</a></li>
 					<li class="nav-item"><a class="nav-link" href="#section-about">About</a></li>
 					<li class="nav-item"><a class="nav-link" href="#section-contact">Contact</a></li>
-					<li class="nav-item"><a class="nav-link" href="https://mauricio-knd.github.io/KND.html" target="_blank" >KND</a></li>
 				</ul>
 			</div>
 		</div>
