Adding Resume Section

--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
 								<div class="overlay overlay-bg"></div>
 								<img class="image img-fluid" src="images/p6.png" alt="">
 							</div>
-							<a href="https://mauricio-knd.github.io/KND.html" target="_blank" class="img-pop-up">
+							<a href="KND.html" target="_blank" class="img-pop-up">
 								<div class="middle">
 									<div class="text align-self-center d-flex"><img src="images/preview.png" alt="">
 									</div>
