--- a/music.html
+++ b/music.html
@@ -28,7 +28,7 @@
 				</div>
 				<nav class="main_nav">
 					<ul class="d-flex flex-row align-items-start justify-content-start">
-						<li><a href="index.html">Home</a></li>
+						<li><a href="KND.html">Home</a></li>
 						<li class="active"><a href="about.html">Music</a></li>
 						<li><a href="#">----</a></li>
 						<li><a href="#">----</a></li>
