--- a/remixes.html
+++ b/remixes.html
@@ -22,7 +22,7 @@
 		<!-- Header -->
 		<header class="header">
 			<div class="header_content d-flex flex-row align-items-center justify-content-center">
-				<div class="logo"><a href="index.html">KND</a></div>
+				<div class="logo"><a href="KND.html">KND</a></div>
 				<div class="log_reg">
 					<ul class="d-flex flex-row align-items-start justify-content-start"></ul>
 				</div>
