--- a/music.html
+++ b/music.html
@@ -22,7 +22,7 @@
 		<!-- Header -->
 		<header class="header">
 			<div class="header_content d-flex flex-row align-items-center justify-content-center">
-				<div class="logo"><a href="index.html">KND</a></div>
+				<div class="logo"><a href="KND.html">KND</a></div>
 				<div class="log_reg">
 					<ul class="d-flex flex-row align-items-start justify-content-start"></ul>
 				</div>
@@ -32,7 +32,7 @@
 						<li class="active"><a href="about.html">Music</a></li>
 						<li><a href="#">----</a></li>
 						<li><a href="#">----</a></li>
-						<li><a href="#">----</a></li>
+						<li><a href="index.html">Resume</a></li>
 					</ul>
 				</nav>
 				<div class="hamburger ml-auto">
@@ -55,11 +55,11 @@
 					</div>
 					<nav class="menu_nav">
 						<ul class="d-flex flex-column align-items-start justify-content-start">
-							<li><a href="index.html">Home</a></li>
+							<li><a href="KND.html">Home</a></li>
 							<li><a href="about.html">Music</a></li>
 							<li><a href="#">----</a></li>
 							<li><a href="#">----</a></li>
-							<li><a href="#">----</a></li>
+							<li><a href="index.html">Resume</a></li>
 						</ul>
 					</nav>
 				</div>
