--- a/remixes.html
+++ b/remixes.html
@@ -28,11 +28,11 @@
 				</div>
 				<nav class="main_nav">
 					<ul class="d-flex flex-row align-items-start justify-content-start">
-						<li><a href="index.html">Home</a></li>
+						<li><a href="KND.html">Home</a></li>
 						<li><a href="music.html">Music</a></li>
 						<li><a href="#">----</a></li>
 						<li><a href="#">----</a></li>
-						<li><a href="#">----</a></li>
+						<li><a href="index.html">Resume</a></li>
 					</ul>
 				</nav>
 				<div class="hamburger ml-auto">
@@ -55,11 +55,11 @@
 					</div>
 					<nav class="menu_nav">
 						<ul class="d-flex flex-column align-items-start justify-content-start">
-							<li><a href="index.html">Home</a></li>
+							<li><a href="KND.html">Home</a></li>
 							<li><a href="music.html">Music</a></li>
 							<li><a href="#">----</a></li>
 							<li><a href="#">----</a></li>
-							<li><a href="#">----</a></li>
+							<li><a href="index.html">Resume</a></li>
 						</ul>
 					</nav>
 				</div>
